Mise à jour du site : ajout du menu burger sur toutes les pages, amélioration du mode sombre (texte visible en mode sombre sur l'accueil), notification d'envoi de message sur la page contact, centrage des contenus sur lyrics, et autres corrections.

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <nav>
+            <div class="burger">&#9776;</div> <!-- Icône menu burger -->
             <ul>
                 <li class="site-name">Mwana Azoya Music</li>
                 <li><a href="index.html">Accueil</a></li>
@@ -19,8 +20,7 @@
             </ul>
         </nav>
         <button id="theme-toggle">Dark Mode</button>
-    </header>
-
+    </header>    
     <main>
         <h2>Mwana Azoya Music</h2>
         <p>Qui sommes-nous ?<br><br></p>  
