--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boyoma Music</title>
+    <title>Mwana Azoya Music</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
         <nav>
+            <div class="burger">&#9776;</div> <!-- Icône menu burger -->
             <ul>
                 <li class="site-name">Mwana Azoya Music</li>
                 <li><a href="index.html">Accueil</a></li>
@@ -19,7 +20,7 @@
             </ul>
         </nav>
         <button id="theme-toggle">Dark Mode</button>
-    </header>
+    </header>    
     <body id="index">
     <main class="hero">
         <h2>Bienvenue sur Mwana Azoya Music</h2>
