--- a/lyrics.html
+++ b/lyrics.html
@@ -9,17 +9,19 @@
 <body>
     <header>
         <nav>
+            <div class="burger">&#9776;</div> <!-- Icône menu burger -->
             <ul>
                 <li class="site-name">Mwana Azoya Music</li>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="music.html">Musique</a></li>
                 <li><a href="lyrics.html">Lyrics</a></li>
-                <li><a href="about.html">À Propos</a></li>
+                <li><a href="about.html">À propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <button id="theme-toggle">Light Mode</button>
+        <button id="theme-toggle">Dark Mode</button>
     </header>
+    
     <body id="lyrics">
     <main>
         <h1>Paroles des Chansons</h1>
